--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,19 @@
 	</repositories>
 
 	<dependencies>
+
 		<!-- This is the matsim "core": -->
 		<dependency>
 			<groupId>org.matsim</groupId>
 			<artifactId>matsim</artifactId>
 			<version>0.9.0</version>
 		</dependency>
-
+        <dependency>
+            <groupId>org.matsim.contrib</groupId>
+            <artifactId>av</artifactId>
+            <version>0.9.0</version>
+            <scope>compile</scope>
+        </dependency>
 		<!-- Include the JUnit testing library -->
 		<dependency>
 			<groupId>junit</groupId>
