--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,12 @@
             <artifactId>matsim</artifactId>
             <version>0.10.0-SNAPSHOT</version>
         </dependency>
-    </dependencies>
+		<dependency>
+			<groupId>com.google.inject.extensions</groupId>
+			<artifactId>guice-assistedinject</artifactId>
+			<version>3.0</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
